--- a/style.css
+++ b/style.css
@@ -1,8 +1,31 @@
  #index{
     background-color: beige;
+    background-image: url("images/firewatch.png");
+    background-size: cover;
+    background-position: center;
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+}
+
+.container{
+    display: flex;
+    background-color:transparent;
+    border: 2px solid rgba(255,255,255, .2);
+    backdrop-filter: blur(20px);
+    height: 40vh ;
+    width: 30vw;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+form > *{
+    margin: 10px;
+    border-radius: 10px;
+    padding: 10px;
+    width: 200px;
 }
