--- a/style.css
+++ b/style.css
@@ -27,5 +27,12 @@ form > *{
     margin: 10px;
     border-radius: 10px;
     padding: 10px;
-    width: 200px;
+    width: 250px;
+
+   
+}
+
+a {
+    color: purple;
+    text-decoration: none;
 }
